# wl-uinput-proxy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: keyboard.rs  main.rs  pointer.rs  seat.rs  uinput.rs
